# async_graphql_apollo_studio_extension

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/: dependabot.yml
.github/workflows/: assigne.yml  audit.yml  changelog.yml  ci.yml  deployment.yml  label.yml  on-merge.yml  on-publish.yml  publish.yml  release.yml
examples/apollo-warp-example/: Cargo.toml
src/: client.rs  compression.rs  lib.rs  proto.rs  register.rs  runtime.rs
src/proto/: mod.rs
src/report_aggregator/: mod.rs
