[package]
name = "async-graphql-extension-apollo-tracing"
version = "2.1.0"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]
description = "An async_graphql extension to send traces & metrics to Apollo Studio"
readme = "README.md"
repository = "https://github.com/async-graphql/async_graphql_apollo_studio_extension"
documentation = "https://docs.rs/async-graphql-extension-apollo-tracing"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "apollo", "studio"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[features]
default = []
compression = ["libflate"]
tokio-comp = ["tokio"]
async-std-comp = ["async-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
protobuf = { version = "2.25.1", features = ["bytes"] }
async-graphql = {version = "3.0.7", features = ["tracing"] }
tracing = "0.1.*"
tracing-futures = { version = "0.2.5", default-features = false, features = ["tokio", "futures-03", "std"] }
futures = "0.3.*"                 # An implementation of futures and streams featuring zero allocations, composability, and itera…
chrono = "0.4.15"
reqwest = { version = "0.11.*", features = ["json"] }
async-trait = "0.1.*" 
serde_json = "1.0.*"                     # A JSON serialization file format
sha2 = "0.10.*"                # Pure Rust implementation of the SHA-2 hash function family including SHA-224, SHA-256, SHA-384, a…
anyhow = "1.0.*"                # Flexible concrete Error type built on std::error::Error
uuid = { version = "0.8.*", features = ["v4"] }                  # A library to generate and parse UUIDs.

# Non-feature optional dependencies
libflate = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
async-std = { version = "1.10", optional = true }
