[package]
name = "async-graphql-extension-apollo-tracing"
version = "3.2.13"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "An async_graphql extension to send traces & metrics to Apollo Studio"
readme = "README.md"
repository = "https://github.com/async-graphql/async_graphql_apollo_studio_extension"
documentation = "https://docs.rs/async-graphql-extension-apollo-tracing"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "apollo", "studio"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
resolver = "2"

[features]
default = ["compression"]
compression = ["libflate"]

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-trait = "0.1"
chrono = "0.4"
cfg-if = "1"
derive_builder = "0.13"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03", "std"] }
uuid = { version = "1.7", features = ["v4", "js"] }                  # A library to generate and parse UUIDs.
wasm-bindgen-futures = "0.4.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1", features = ["derive"] }
tonic = "0.10"
tokio = { version = "1", features = ["full"] }

# Non-feature optional dependencies
libflate = { version = "2", optional = true }

[build-dependencies]
async-std = { version = "1", default-features = false, features = ["default", "tokio1"] }
cfg-if = "1.0.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
prost-build = "0.12.3"
protox = "0.6.0"
tonic-build = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tokio = { version = "1", features = ["full"] }
