[package]
name = "async-graphql-extension-apollo-tracing"
version = "3.2.15"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "An async_graphql extension to send traces & metrics to Apollo Studio"
readme = "README.md"
repository = "https://github.com/async-graphql/async_graphql_apollo_studio_extension"
documentation = "https://docs.rs/async-graphql-extension-apollo-tracing"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "apollo", "studio"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
resolver = "2"

[features]
default = ["compression"]
compression = ["libflate"]

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-trait = "0.1"
chrono = "0.4"
cfg-if = "1"
derive_builder = "0.13"
futures = "0.3"
futures-locks = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
serde-json-wasm = "1.0.1"
tracing = "0.1"
uuid = { version = "1.7", features = ["v4", "js"] }                  # A library to generate and parse UUIDs.
wasm-bindgen-futures = "0.4.18"
protobuf = "3.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Non-feature optional dependencies
libflate = { version = "2", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "windows")))'.dependencies]
uname = "0.1.1"

[build-dependencies]
protobuf-codegen = "3.4.0"
async-std = { version = "1", default-features = false, features = ["default", "tokio1"] }
cfg-if = "1.0.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
prost-build = "0.12.3"
protox = "0.6.0"
tonic-build = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tokio = { version = "1", features = ["full"] }
